# finalproject_kivilev_M25-555

./: .gitignore  Makefile  README.md  demo_wallet.cast  main.py  pyproject.toml  session.json  test_fix.py  ultimate_test.py  valuta_demo.cast
data/: exchange_rates.json  portfolios.json  rates.json  users.json
valutatrade_hub/: decorators.py  logging_config.py
valutatrade_hub/cli/: interactive.py  interface.py
valutatrade_hub/core/: exceptions.py  models.py  usecases.py
valutatrade_hub/infra/: database.py  settings.py
valutatrade_hub/parser_service/: __init__.py  api_clients.py  config.py  storage.py  updater.py
